src/ui/snapshots/starcord__ui__frames__confirm-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / C O R D ════════════════════════════════════════════════════════════════════ servers ═╗
║                                                                                   ‹  ›  settings ║
║• First Guild (2)                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ CHANNELS — First Guild ═════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║# general (2)                                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ CONVERSATION — #general · First Guild ══════════════════════════════════════════════════════════╗
║                                                                           search  pins  settings ║
║  the picture I took                                                                              ║
║  [image 1024x768 harbour.png]                                                                    ║
║  Jordan  09:15        ╔═ delete this message ════════════════════════════╗                       ║
║  https://example.inval║here is the thing I meant                         ║                       ║
║  │ A page title       ║                                                  ║                       ║
║  │ Two sentences of de║this cannot be undone                             ║                       ║
║  │ second is there so ║                                                  ║                       ║
║▕ Alex  09:20          ╚════════════════════════════════════ y yes · n no ╝                       ║
║▕ https://tenor.invalid/view/a-cat-12345                                                          █
║▕ [gif ▶ a cat, falling over]                                                                     █
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ COMPOSE ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                               attach  emoji  gif ║
║message #general · First Guild                                                                    ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ MEMBERS ════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                         settings ║
║2 online · 1 idle · 1 offline                                                                     ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  #general · First Guild                                    chat  7 unread · @3  ▲ online  off
