src/ui/snapshots/starcord__ui__frames__dock-mocha-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
┌──────┐┌═ First Guild ═─────────┐┌═ chat ═────────────────────────────────┐┌═ members ═───────────┐
│      ││        settings  close ││            search  pins  zen  settings ││      settings  close │
│@    1││# rules                 ││                                        ││REGULARS — 2          │
│FG   2││▾ TEXT CHANNELS         ││                                        ││● Alex                │
│SG   •││  # general (2)         ││                                        ││● Jo                  │
│··    ││  # random              ││                                        ││ONLINE — 1            │
│      ││  ! announcements       ││                                        ││● Sam                 │
│      ││▾ ARCHIVE               ││                                        ││OFFLINE — 1           │
│      ││  # old-decisions       ││                                        ││● Robin               │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││            choose a channel            ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      │└────────────────────────┘│                                        ││                      │
│      │┌═ messages ═────────────┐│                                        ││                      │
│      ││         friends  close ││                                        ││                      │
│      ││○ Wren of the Long Displ││                                        ││                      │
│      ││○ Alex, Jordan [3]      ││                                        ││                      │
│      ││● Alex (1)              ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        │└────────────────────────────────────────┘│                      │
│      ││                        │┌═ compose ═─────────────────────────────┐│                      │
│      ││                        ││                     attach  emoji  gif ││                      │
│      ││                        ││open a channel to write in it           ││                      │
└──────┘└────────────────────────┘└────────────────────────────────────────┘└──────────────────────┘
? help                                                            chat  6 unread · @3  ▲ online  off
