src/ui/snapshots/starcord__ui__frames__dock-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
┌──────┐┌═ First Guild ═─────────┐┌═ chat ═────────────────────────────────┐┌═ members ═───────────┐
│      ││        settings  close ││            search  pins  zen  settings ││      settings  close │
│@    1││# rules                 ││                                        ││REGULARS — 2          │
│FG   2││▾ TEXT CHANNELS         ││                                        ││● Alex                │
│SG   •││  # general (2)         ││                                        ││● Jo                  │
│··    ││  > about the deploy    ││                                        ││ONLINE — 1            │
│      ││  # random              ││                                        ││● Sam                 │
│      ││  ! announcements       ││                                        ││OFFLINE — 1           │
│      ││▾ ARCHIVE               ││                                        ││● Robin               │
│      ││  # old-decisions       ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││            choose a channel            ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      │└────────────────────────┘│                                        ││                      │
│      │┌═ messages ═────────────┐│                                        ││                      │
│      ││         friends  close ││                                        ││                      │
│      ││○ Wren of the Long Displ││                                        ││                      │
│      ││○ Alex, Jordan [3]      ││                                        ││                      │
│      ││● Alex (1)              ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        ││                                        ││                      │
│      ││                        │└────────────────────────────────────────┘│                      │
│      ││                        │┌═ compose ═─────────────────────────────┐│                      │
│      ││                        ││                     attach  emoji  gif ││                      │
│      ││                        ││open a channel to write in it           ││                      │
└──────┘└────────────────────────┘└────────────────────────────────────────┘└──────────────────────┘
? help                                                            chat  7 unread · @3  ▲ online  off
