src/ui/snapshots/starcord__ui__frames__dock-terminal-60x12.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 60, 12)"
---
┌═ First Guild ═───┐┌═ chat ═──────────────────────────────┐
│  messages  close ││          search  pins  zen  settings │
│# rules           ││                                      │
│▾ TEXT CHANNELS   ││                                      │
│  # general (2)   ││           choose a channel           │
│  # random        ││                                      │
│  ! announcements │└──────────────────────────────────────┘
│▾ ARCHIVE         │┌═ compose ═───────────────────────────┐
│  # old-decisions ││                   attach  emoji  gif │
│                  ││open a channel to write in it         │
└──────────────────┘└──────────────────────────────────────┘
? help                          6 unread · @3  ▲ online  off
