src/ui/snapshots/starcord__ui__frames__fold-terminal-60x12.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 60, 12)"
---
┌═ messages ═──────┐┌═ chat ═──────────────────────────────┐
│  channels  close ││          search  pins  zen  settings │
│○ Wren of the Long││                                      │
│○ Alex, Jordan [3]││                                      │
│● Alex (1)        ││           choose a channel           │
│                  ││                                      │
│                  ││                                      │
│                  │└──────────────────────────────────────┘
│                  │┌═ compose ═───────────────────────────┐
│                  ││                   attach  emoji  gif │
└──────────────────┘└──────────────────────────────────────┘
? help                          6 unread · @3  ▲ online  off
