src/ui/snapshots/starcord__ui__frames__help-mocha-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
┌──────┐┌═╔ keys — more below ═══════════════════════════════════════════════════════════╗─────────┐
│      ││ ║  navigation                         chat                                     ║s  close │
│@    1││#║  tab           next panel           wheel                scroll three rows   ║         │
│FG   2││▾║  shift+tab     previous panel       click                select a message    ║         │
│SG   •││ ║  alt+1         focus servers        double-click         open the attachment ║         │
│··    ││ ║  alt+2         focus channels       click a reaction     add or remove yours ║         │
│      ││ ║  alt+3         focus messages       click a link         open it             ║         │
│      ││▾║  alt+4         focus chat           click the ↩ line     go to the quoted    ║         │
│      ││ ║  alt+5 / i     write a message      click ↓ n new        jump to the newest  ║         │
│      ││ ║  alt+6         focus members        lists                                    ║         │
│      ││ ║  up / k        up one               click, wheel         choose one          ║         │
│      ││ ║  down / j      down one             double-click         open a channel      ║         │
│      ││ ║  shift+up/K    up ten               click a category     fold or unfold it   ║         │
│      ││ ║  shift+down/J  down ten             composer                                 ║         │
│      ││ ║  pgup          page up              click                place the caret     ║         │
│      ││ ║  pgdn          page down            click a chip's ×     drop the attachment ║         │
│      │└─║  home / gg     to the top           panels                                   ║         │
│      │┌═║  end / G       to the bottom        drag a seam          resize two panels   ║         │
│      ││ ║  enter         open                 click a header word  what the word says  ║         │
│      ││○║  esc           back, or mark read   status                                   ║         │
│      ││○║  [             previous server      click ? help         open this list      ║         │
│      ││●║  ]             next server          click the channel    jump to anything    ║         │
│      ││ ║  alt+up        previous unread      click the state      reconnect now       ║         │
│      ││ ║  alt+down      next unread                                                   ║         │
│      ││ ║  ctrl+k        jump to anything                                              ║         │
│      ││ ║  ctrl+f        search, also /                                                ║         │
│      ││ ║  lists                                                                       ║         │
│      ││ ║  h / l         fold, unfold                                                  ║         │
└──────┘└─║  chat                                                                        ║─────────┘
? help    ╚══════════════════════════════════════════════════════════════════════════════╝nline  off
